# rust-transcoder

./: .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2025-07-15-092339_create_videos_jobs/: down.sql  up.sql
src/: config.rs  main.rs
src/api/: job.rs  mod.rs  upload.rs
src/db/: mod.rs  models.rs  schema.rs
src/tasks/: transcoder.rs
