[package]
name = "rust-transcoder"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "macros", "time"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["limit", "cors"] }
axum-extra = { version = "0.9", features = ["multipart"] }
tokio-util = "0.7"
diesel = { version = "2.2.12", features = ["postgres", "r2d2", "chrono", "uuid"] }
r2d2 = "0.8.10"
