[package]
name = "rust-transcoder"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
axum-extra = { version = "0.9", features = ["multipart"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["limit", "cors"] }

diesel = { version = "2.2.12", features = ["postgres", "r2d2", "chrono", "uuid"] }
r2d2 = "0.8.10"

tracing = "0.1"
tracing-subscriber = "0.3"
tokio-util = "0.7"
axum_typed_multipart = "0.16.3"

